# fms

./: .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose-demo.yml  docker-compose-hybrid.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.demo.yml  docker-compose.local.yml  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
.claude/: settings.local.json
.claude/hooks/: README.md
.claude/skills/: senior-backend.md  senior-frontend.md  senior-qa.md
.cursor/rules/: 00-global-lsp.mdc  01-plugin-bridge.mdc
.github/workflows/: ci.yml  playwright-e2e-demo.yml  wave-e2e.yml
backend/: .env.demo.example  .env.example  alembic.ini  conftest.py  requirements.txt
backend/app/: __init__.py  config.py  database.py  docker_migrate.py  main.py  models.py  pitch_seed.py  rbac.py  realtime.py  report_template_sync_cli.py  schema_ensure.py  schemas.py  seed.py  seed_super.py  standard_inspection_report_schema.py  test_seed.py
backend/migrations/: env.py
backend/scripts/: add_user_username_client_status.sql  fix_component_shims.py  fix_route_shims.py  migrate_components_to_features.py  migrate_pages_to_features.py  migrate_roles.py  (+7 more)
deploy/: Dockerfile.api  Dockerfile.web  nginx.conf
docs/: ARCHITECTURE.md  CLEANUP_STAGE.md  HOW_TO_RUN.md  README.md  USER_GUIDE.md  refined_prompt_fms_v2.md
scripts/: e2e-json-summary.mjs  share-demo-tunnel.ps1
src/: App.tsx  main.tsx
(+413 files in other folders)
